# robotarm_firmware_lnx

./: .gitignore  .gitmodules  Architecture.md  README.md  cyclictest_vis.py
.devcontainer/: Dockerfile  devcontainer.json
docs/motor_cfg/: axis1_moteus_r411_eaglepower_8308.cfg  axis2_moteus_r411_eaglepower_8308.cfg  axis3_moteus_r411_eaglepower_8308.cfg
docs/timing/: timing_analyzer.py  transport_timing_20260708_121509.csv  transport_timing_20260708_131117.csv  tt_500hz_usb_sequential.csv  tt_usb_timeout_1ms_rotateorder.csv
src/moteus_interface/: CMakeLists.txt  failure_rate_test.py  moteus_plugins.xml  package.xml
src/moteus_interface/include/moteus_interface/: CanProtocolTypes.hpp  MoteusInterface.hpp  Transport.hpp  TransportTiming.hpp  TransportUDP.hpp  TransportUSB.hpp
src/moteus_interface/src/: MoteusInterface.cpp  Transport.cpp  TransportUDP.cpp  TransportUSB.cpp
src/robotarm_bringup/: package.xml  setup.cfg  setup.py
src/robotarm_bringup/config/: controllers.yaml
src/robotarm_bringup/launch/: robotarm_hardware.launch.py  robotarm_mock.launch.py
src/robotarm_controllers/: CMakeLists.txt  package.xml  robotarm_controllers_plugins.xml
src/robotarm_controllers/include/robotarm_controllers/: TeleopController.hpp
src/robotarm_controllers/src/: TeleopController.cpp
