<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotarm_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ruben01egle@gmail.com">root</maintainer>
  <license>TODO: License declaration</license>

  <depend>controller_manager</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  
  <exec_depend>moteus_interface</exec_depend>
  <exec_depend>robotarm_controllers</exec_depend>
  <exec_depend>robotarm_description</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
